swc/src/swc-api-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swc-api
  labels:
    name: swc-api
