swc/src/swc-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swc-api-service
  namespace: swc-api
spec:
  type: LoadBalancer
  selector:
    app: swc-api
  ports:
  - port: 8080
    targetPort: 8000
