swc/src/swc-api-net-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: swc-api-net-policy
  namespace: swc-app
spec:
  podSelector:
    matchLabels:
      app: swc-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: swc-app
  egress:
  - to:
      - namespaceSelector:
          matchLabels:
            name: swc-app
